<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_option_home"
            android:icon="@drawable/home_24"
            android:title="@string/home"
            android:itemBackground="@android:color/transparent"/>
        <item
            android:id="@+id/nav_option_profile"
            android:icon="@drawable/ic_profile_24"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_option_company"
            android:icon="@drawable/ic_baseline_business_24"
            android:title="@string/company" />
        <item
            android:id="@+id/nav_option_logout"
            android:icon="@drawable/ic_baseline_arrow_forward_24"
            android:title="@string/logout" />
    </group>

</menu>