<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawerLayoutCompanyInfo"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="25dp"
        android:layout_below="@+id/datasheet_list_title"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true">

        <TextView
            android:id="@+id/company_name"
            style="@style/title_product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="110dp"
            android:textAlignment="center"
            android:textColor="@color/primaryDark"
            app:layout_constraintEnd_toEndOf="@+id/frameLayout2"
            app:layout_constraintStart_toStartOf="@+id/frameLayout2"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:id="@+id/frameLayout2"
            android:layout_width="350dp"
            android:layout_height="2dp"
            android:background="@color/primaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/company_name" />

        <TextView
            android:id="@+id/social_reason"
            style="@style/product_infotmation_titles"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="50dp"
            android:text="@string/companyName"
            android:textColor="@color/secondary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/company_name"
            app:layout_goneMarginStart="20dp" />

        <TextView
            android:id="@+id/comercial_email"
            style="@style/product_infotmation_titles"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/companyEmail"
            android:textColor="@color/secondary"
            app:layout_constraintStart_toStartOf="@+id/social_reason"
            app:layout_constraintTop_toBottomOf="@+id/reason_of_company" />

        <TextView
            android:id="@+id/plan_company"
            style="@style/product_infotmation_titles"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/companyPlan"
            android:textColor="@color/secondary"
            app:layout_constraintStart_toStartOf="@+id/social_reason"
            app:layout_constraintTop_toBottomOf="@+id/email_of_company" />

        <TextView
            android:id="@+id/busines_company"
            style="@style/product_infotmation_titles"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/companyBusines"
            android:textColor="@color/secondary"
            app:layout_constraintStart_toStartOf="@+id/social_reason"
            app:layout_constraintTop_toBottomOf="@+id/plan_of_company" />

        <TextView
            android:id="@+id/reason_of_company"
            style="@style/product_infotmation_titles"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:textColor="@color/secondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/social_reason" />

        <TextView
            android:id="@+id/email_of_company"
            style="@style/product_infotmation_titles"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:textColor="@color/secondary"
            app:layout_constraintEnd_toEndOf="@+id/reason_of_company"
            app:layout_constraintTop_toTopOf="@+id/comercial_email" />

        <TextView
            android:id="@+id/plan_of_company"
            style="@style/product_infotmation_titles"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:textColor="@color/secondary"
            app:layout_constraintEnd_toEndOf="@+id/reason_of_company"
            app:layout_constraintTop_toTopOf="@+id/plan_company" />

        <TextView
            android:id="@+id/busines_of_company"
            style="@style/product_infotmation_titles"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:textColor="@color/secondary"
            app:layout_constraintEnd_toEndOf="@+id/reason_of_company"
            app:layout_constraintTop_toTopOf="@+id/busines_company" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/footer_fts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="500dp"
            android:background="@drawable/rounded_top"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/app_name"
            android:orientation="horizontal"
            android:textAlignment="center"
            style="@style/footerAppearence"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/company_navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/nav_drawer_menu"/>

</androidx.drawerlayout.widget.DrawerLayout>